fix cloudinary bug squashing

--- a/app/assets/stylesheets/categories.css
+++ b/app/assets/stylesheets/categories.css
@@ -127,11 +127,11 @@ a.back-btn-link:hover {
 
 /*Most Recent Rows*/
 .most-row:nth-of-type(1) .most-col-word {
-	border: 2px solid #3A779E;
+	border: 4px solid #3A779E;
 }
 
 .most-row:nth-of-type(2) .most-col-word {
-	border: 2px solid #3A779E;
+	border: 4px solid rgba(238, 16, 68, 0.7);
 }
 
 /*---------------------keyboard page------------------*/
